# BLE-Scanner

./: .gitignore  BluetoothScanner.cpp  BluetoothScanner.h  CMakeLists.txt  btferret.py  devices.txt  main.cpp
TP357_ble_gateway/: BluetoothScanner.cpp  BluetoothScanner.h  CMakeLists.txt  DataProcessor.cpp  DataProcessor.h  EnvReader.cpp  EnvReader.h  FirestoreManager.cpp  FirestoreManager.h  IDataConsumer.h  IDatabaseManager.h  IFirestoreManager.h  MessageQueue.cpp  MessageQueue.h  RestApiConsumer.cpp  RestApiConsumer.h  SQLiteDatabaseManager.cpp  SQLiteDatabaseManager.h  SensorData.h  SensorDataSerializer.cpp  SensorDataSerializer.h  decode_db.py  main.cpp
TP357_ble_gateway/node_server/: package.json  server.js
btlib_app/: CMakeLists.txt  itag.cpp
camera_drm_display/: CMakeLists.txt  drm_renderer.cpp  drm_renderer.h  libcamera-init-framebuffer.cpp
